--- a/image_preprocessing.ipynb
+++ b/image_preprocessing.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "import cv2\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import os"
    ]
   },
   {
@@ -42,29 +43,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "13e7fc22-a5d5-49d9-86a3-e87bf5796e80",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_image(image):\n",
-    "    cv2.imwrite(f\"temp/{image}.jpg\", image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "bbe3ab90-028d-4ca1-8468-ada4bc577164",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_path = \"data/list-of-names.jpg\"\n",
-    "image = cv2.imread(image_path)"
+    "def generate_image(image_data, filename):\n",
+    "    os.makedirs(\"temp\", exist_ok=True)\n",
+    "    cv2.imwrite(f\"temp/{filename}.jpg\", image_data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "bbe3ab90-028d-4ca1-8468-ada4bc577164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_path = \"data/list-of-names.jpg\"\n",
+    "image = cv2.imread(image_path)\n",
+    "base_image = image.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "7fd00849-0166-44d5-880d-ba087bfcb69a",
    "metadata": {},
    "outputs": [],
@@ -77,25 +80,14 @@
    "execution_count": 6,
    "id": "45c05267-f8d7-4f90-9b47-f2f4ed087ba6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cv2.imwrite(\"temp/gray.jpg\", gray)"
+    "generate_image(gray, \"gray\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f5196a53-b4fd-446e-aae1-5c740f28132e",
    "metadata": {},
    "outputs": [],
@@ -105,28 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "d30a4875-2254-418e-9b88-4cd1869c4c83",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "generate_image(blur)"
+    "generate_image(blur, \"blur\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "d44f8d46-979a-4a73-8422-953212e3677e",
    "metadata": {},
    "outputs": [],
@@ -136,32 +117,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "82eeb2bb-cf3e-498b-8535-0d9870b4c741",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "generate_image(thresh)"
+    "generate_image(thresh, \"thresh\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7f8649c0-08e5-4b8a-aaf0-ec60bd44a3b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (3, 13))\n",
+    "dilate = cv2.dilate(thresh, kernel, iterations=1)\n",
+    "generate_image(dilate, \"dilate\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fd327659-b737-416c-97ff-678917408b85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnts = cv2.findContours(dilate, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "cnts = cnts[0] if len(cnts) == 2 else cnts[1]\n",
+    "cnts = sorted(cnts, key=lambda x: cv2.boundingRect(x)[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20fa3589-516f-4064-8680-89f1ece07bf6",
+   "id": "c655af2f-397c-4e24-a189-b92185c6d312",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for c in cnts:\n",
+    "    x, y, w, h = cv2.boundingRect(c)\n",
+    "    cv2.rectangle(image, (x, y), (x+w, y+h), (38, 255, 12), 2)\n",
+    "generate_image(image, \"\")"
+   ]
   }
  ],
  "metadata": {
