adding to .txt conversion

--- a/ocr_process.ipynb
+++ b/ocr_process.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "3219d8af-7fd0-48d3-a888-aa2afd88c6c9",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "82c5ba70-11a3-445b-90dd-fc3f9a9c1e5c",
    "metadata": {},
    "outputs": [],
@@ -201,12 +201,12 @@
     "    i = i.split(\" \")[0]\n",
     "    if len(i) > 2:\n",
     "        if i[0] == \"A\" or i[0] == \"B\":    \n",
-    "            names.append(i)"
+    "            names.append(i.replace(',', ''))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "2426dccb-4725-4d89-bc7c-4a22fec5a2b2",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Abdel-Malek,', 'Abernethy,', 'Achinger,', 'Adler,', 'Agarwala,', 'Agnelli,', 'Agosti,', 'Albrecht,', 'Alexander,', 'Almasy,', 'Alston,', 'Altholz,', 'Ammassari,', 'Anders,', 'Anderson,', 'Andréani,', 'Andréas,', 'Andreasi,', 'Andrews,', 'Angell,', 'Anikeev,', 'Anklage', 'Annales', 'Ansart,', 'Anweiler,', 'Archiv', 'Archives', 'Archivi', 'Arian,', 'Arima,', 'Aron,', 'Aronson,', 'Ashraf,', 'Ashtor,', 'Asociacién', 'Atkin,', 'Atkinson,', 'Austromarxismus,', 'Auty,', 'Avakumovié,', 'Avrich,', 'Azmon,', 'Baer,', 'Bahlo,', 'Bahne,', 'Bailey,', 'Bairoch,', 'Bakoenin,', 'Bakunin,', 'Bakuninisti', 'Ballon,', 'Barbadoro,', 'Barnes,', 'Barrére,', 'Barry,', 'Bartel,', 'Bartke,', 'Bartley,', 'Bartoli,', 'Bastide,', 'Bauer,', 'Bayer-Lothe,', 'Bayod', 'Bebel,', 'Bécarud,', 'Bechhofer,', 'Behr,', 'Benda,', 'Benn,', 'Bennassar,', 'Bennett,', 'Beradt,', 'Berger,', 'Bergner,', 'Berman,', 'Bernard,', 'Bernstein,', 'Bernstein,', 'Bernstein,', 'Bernstein,', 'Berque,', 'Besnard,', 'Bethell,', 'Bethell,', 'Bibliography', 'Bingemer,', 'Bjorklund,', 'Blansdorf,', 'Blind,', 'Bloch,', 'Blum,', 'Boahen,', 'Bock,', 'Bohm,', 'Bogdanor,', 'Bohmann,', 'Boilet,', 'Bolliger,', 'Bon,', 'Bopegamage,', 'Bormann,', 'Boserup,', 'Boswell,', 'Bourassa,', 'Bourguina,', 'Boyson,', 'Braun,', 'Bravo,', 'Brendel,', 'Bricianer,', 'Briggs,', 'Briguglio,', 'Britain,', 'Brodhead,', 'Broekmeyer,']\n"
+      "['Abdel-Malek', 'Abernethy', 'Achinger', 'Adler', 'Agarwala', 'Agnelli', 'Agosti', 'Albrecht', 'Alexander', 'Almasy', 'Alston', 'Altholz', 'Ammassari', 'Anders', 'Anderson', 'Andréani', 'Andréas', 'Andreasi', 'Andrews', 'Angell', 'Anikeev', 'Anklage', 'Annales', 'Ansart', 'Anweiler', 'Archiv', 'Archives', 'Archivi', 'Arian', 'Arima', 'Aron', 'Aronson', 'Ashraf', 'Ashtor', 'Asociacién', 'Atkin', 'Atkinson', 'Austromarxismus', 'Auty', 'Avakumovié', 'Avrich', 'Azmon', 'Baer', 'Bahlo', 'Bahne', 'Bailey', 'Bairoch', 'Bakoenin', 'Bakunin', 'Bakuninisti', 'Ballon', 'Barbadoro', 'Barnes', 'Barrére', 'Barry', 'Bartel', 'Bartke', 'Bartley', 'Bartoli', 'Bastide', 'Bauer', 'Bayer-Lothe', 'Bayod', 'Bebel', 'Bécarud', 'Bechhofer', 'Behr', 'Benda', 'Benn', 'Bennassar', 'Bennett', 'Beradt', 'Berger', 'Bergner', 'Berman', 'Bernard', 'Bernstein', 'Bernstein', 'Bernstein', 'Bernstein', 'Berque', 'Besnard', 'Bethell', 'Bethell', 'Bibliography', 'Bingemer', 'Bjorklund', 'Blansdorf', 'Blind', 'Bloch', 'Blum', 'Boahen', 'Bock', 'Bohm', 'Bogdanor', 'Bohmann', 'Boilet', 'Bolliger', 'Bon', 'Bopegamage', 'Bormann', 'Boserup', 'Boswell', 'Bourassa', 'Bourguina', 'Boyson', 'Braun', 'Bravo', 'Brendel', 'Bricianer', 'Briggs', 'Briguglio', 'Britain', 'Brodhead', 'Broekmeyer']\n"
      ]
     }
    ],
@@ -224,11 +224,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "92161b31-b1e4-426d-9e00-3378f5d6db73",
+   "execution_count": 34,
+   "id": "69f5619c-b10c-4180-b873-c714abec61b7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('result.txt', 'w') as f:\n",
+    "    for i in names:\n",
+    "        f.write(i)\n",
+    "        f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2fa17b37-5fa7-4fa8-90db-34e630d3dee6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abdel-Malek\n",
+      "Abernethy\n",
+      "Achinger\n",
+      "Adler\n",
+      "Agarwala\n",
+      "Agnelli\n",
+      "Agosti\n",
+      "Albrecht\n",
+      "Alexander\n",
+      "Almasy\n",
+      "Alston\n",
+      "Altholz\n",
+      "Ammassari\n",
+      "Anders\n",
+      "Anderson\n",
+      "Andréani\n",
+      "Andréas\n",
+      "Andreasi\n",
+      "Andrews\n",
+      "Angell\n",
+      "Anikeev\n",
+      "Anklage\n",
+      "Annales\n",
+      "Ansart\n",
+      "Anweiler\n",
+      "Archiv\n",
+      "Archives\n",
+      "Archivi\n",
+      "Arian\n",
+      "Arima\n",
+      "Aron\n",
+      "Aronson\n",
+      "Ashraf\n",
+      "Ashtor\n",
+      "Asociacién\n",
+      "Atkin\n",
+      "Atkinson\n",
+      "Austromarxismus\n",
+      "Auty\n",
+      "Avakumovié\n",
+      "Avrich\n",
+      "Azmon\n",
+      "Baer\n",
+      "Bahlo\n",
+      "Bahne\n",
+      "Bailey\n",
+      "Bairoch\n",
+      "Bakoenin\n",
+      "Bakunin\n",
+      "Bakuninisti\n",
+      "Ballon\n",
+      "Barbadoro\n",
+      "Barnes\n",
+      "Barrére\n",
+      "Barry\n",
+      "Bartel\n",
+      "Bartke\n",
+      "Bartley\n",
+      "Bartoli\n",
+      "Bastide\n",
+      "Bauer\n",
+      "Bayer-Lothe\n",
+      "Bayod\n",
+      "Bebel\n",
+      "Bécarud\n",
+      "Bechhofer\n",
+      "Behr\n",
+      "Benda\n",
+      "Benn\n",
+      "Bennassar\n",
+      "Bennett\n",
+      "Beradt\n",
+      "Berger\n",
+      "Bergner\n",
+      "Berman\n",
+      "Bernard\n",
+      "Bernstein\n",
+      "Bernstein\n",
+      "Bernstein\n",
+      "Bernstein\n",
+      "Berque\n",
+      "Besnard\n",
+      "Bethell\n",
+      "Bethell\n",
+      "Bibliography\n",
+      "Bingemer\n",
+      "Bjorklund\n",
+      "Blansdorf\n",
+      "Blind\n",
+      "Bloch\n",
+      "Blum\n",
+      "Boahen\n",
+      "Bock\n",
+      "Bohm\n",
+      "Bogdanor\n",
+      "Bohmann\n",
+      "Boilet\n",
+      "Bolliger\n",
+      "Bon\n",
+      "Bopegamage\n",
+      "Bormann\n",
+      "Boserup\n",
+      "Boswell\n",
+      "Bourassa\n",
+      "Bourguina\n",
+      "Boyson\n",
+      "Braun\n",
+      "Bravo\n",
+      "Brendel\n",
+      "Bricianer\n",
+      "Briggs\n",
+      "Briguglio\n",
+      "Britain\n",
+      "Brodhead\n",
+      "Broekmeyer\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('result.txt', 'r') as f:\n",
+    "    print(f.read())"
+   ]
   }
  ],
  "metadata": {
